--- a/h01.html
+++ b/h01.html
@@ -1,10 +1,12 @@
-<html>  
-
-    <head>
-
-    </head>
-    <body>
-        <h1>See on pealkiri</h1>
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Saepe, doloremque officia a maxime possimus accusamus at, perspiciatis nam voluptatem enim aspernatur similique rerum minus? Delectus earum quibusdam ex repellendus maiores.</p>
-    </body>    
+<!DOCTYPE html>
+<html lang="et">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>HtML harjutused</title>
+</head>
+<body>
+    <h1>Pealkiri</h1>
+    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Fugiat, adipisci est nemo incidunt earum maxime voluptatum, ad maiores fuga nam exercitationem! Iusto, eum aliquam expedita impedit natus veniam pariatur nesciunt.</p>
+</body>
 </html>
